PyMaker/datas/object2/RawHTML/i2101/Python_DOC_referPages.simple-print-statement-is-not-working-inside-method-with-if-statement-in-python.txt
<div class="post-text" itemprop="text">
<p>I started learning Python code recently and one simple print statement is giving me trouble since last 4 days.</p>
<p><strong>Problem:</strong> the print statement is not working inside the <code>validatePostcode(postcode)</code> method for if-statement. The assigned value is 200 (status code) which is printing fine without the if-statement. Also, when I compare with the True (result value) for that API it works fine without if-statement, why it is not working after I apply the if and try to compare?</p>
<p><strong>Error:</strong> </p>
<pre><code>  File "./py_script3.py", line 32
    print ("Congrats")
        ^
IndentationError: expected an indented block
</code></pre>
<hr/>
<pre><code>    #!/usr/bin/env python3


    import os,re,sys


    import urllib.request as req
    import json

    def loadJsonResponse(url):
        #return json.loads(req.urlopen(url).read().decode('utf-8'))['result']
        #return json.loads(req.urlopen(url).read().decode('utf-8'))['status']
        print ("I am in loadJsonResponse before returning string")
        string = json.loads(req.urlopen(url).read().decode('utf-8'))
        return string
        print ("I am in loadJsonResponse after returning string")

    def lookuppostcode(postcode):
        url = 'https://api.postcodes.io/postcodes/{}'.format(postcode)
        return loadJsonResponse(url)

    def validatePostcode(postcode):
        url = 'https://api.postcodes.io/postcodes/{}/validate'.format(postcode)
        #return loadJsonResponse(url)
        string = json.loads(req.urlopen(url).read().decode('utf-8'))
        Value = str(string['status'])
        print (Value)
        if Value == 200 :
        print ("Congrats")

    def randomPostcode():
        url = 'https://api.postcodes.io/random/postcodes'
        return loadJsonResponse(url)

    def queryPostcode(postcode):
        url = 'https://api.postcodes.io/postcodes?q={}'.format(postcode)
        return loadJsonResponse(url)

    def getAutoCompletePostcode(postcode):
        url = 'https://api.postcodes.io/postcodes/{}/autocomplete'.format(postcode)
        return loadJsonResponse(url)

    #Input = input("Enter the postcode : ")
    #print(lookuppostcode('CB3 0FA'))
    validatePostcode('CB3 0FA')
    #print(queryPostcode('HU88BT'))
    #print(randomPostcode(Input))
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>This piece of code (which is generating the error):</p>
<pre><code>if Value == 200 : 
print ("Congrats")
</code></pre>
<p>Should be</p>
<pre><code>if Value == 200 : 
    print ("Congrats")
</code></pre>
<p>Because python expects an indented block after the conditional, just like the message error is saying to you</p>
</div>
<div class="post-text" itemprop="text">
<p>You should indent the print statement like so:</p>
<pre><code>if Value == 200 :
   print ("Congrats")
</code></pre>
<p>You can read more about this <a href="http://anh.cs.luc.edu/handsonPythonTutorial/ifstatements.html" rel="nofollow noreferrer">here</a>!</p>
</div>
<div class="post-text" itemprop="text">
<p>From <a href="https://docs.python.org/2.0/ref/indentation.html" rel="nofollow noreferrer">https://docs.python.org/2.0/ref/indentation.html</a>: </p>
<blockquote>
<p>Leading whitespace (spaces and tabs) at the beginning of a logical line is used to compute the indentation level of the line, which in turn is used to determine the grouping of statements.</p>
</blockquote>
<p>By doing </p>
<pre><code>if Value == 200:
print ("Congrats")
</code></pre>
<p>Python interprets the two lines as two different groups of statements. What you should do is:</p>
<pre><code>if Value == 200:
    print ("Congrats")
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Need to add an indent after the if statement. You can do so by pressing return after typing the colon</p>
</div>
<span class="comment-copy">After a line with <code>if...:</code> an indented block with code to execute conditionally is expected.</span>
<span class="comment-copy">I added a line in between my if statement and print statement, but does not work, is that what you suggested Michael ?</span>
<span class="comment-copy">Can I have an example pleasE?</span>
<span class="comment-copy">Adding a line doesn't work. If you are not familiar enough with Python you should start with the <a href="https://docs.python.org/3/tutorial/" rel="nofollow noreferrer">Python tutorial</a></span>
<span class="comment-copy">Well Sure, as I said I recently started, I am learning on the fly. I just needed and example to add the indented block after if statement. Anyways thanks Michael</span>
<span class="comment-copy">Great , I am not getting the error of indented block now, but its not printing the "Congrats"</span>
<span class="comment-copy">You have sure that the <code>Value</code> is <code>200</code>?</span>
<span class="comment-copy">figured out why not working...the if was not able to compare the numeric value as string. I am good with my script Thanks so much Mr Tacon.</span>
<span class="comment-copy">You can use <code>int(Value)</code> to cast it to an integer</span>
